@@ -25,12 +25,9 @@
 #include "networkproxyfactory.h"
 #include "settings.h"
 #include "config.h"
+#include "globalstatic.h"
 #include <QTimerEvent>
 #include <QTimer>
-#ifdef ENABLE_KDE_SUPPORT
-#include <KDE/KGlobal>
-K_GLOBAL_STATIC(NetworkAccessManager, instance)
-#endif
 
 #include <QDebug>
 static bool debugEnabled=false;
@@ -147,18 +144,7 @@ void NetworkJob::handleReadyRead()
     emit readyRead();
 }
 
-NetworkAccessManager * NetworkAccessManager::self()
-{
-    #ifdef ENABLE_KDE_SUPPORT
-    return instance;
-    #else
-    static NetworkAccessManager *instance=0;
-    if (!instance) {
-        instance=new NetworkAccessManager;
-    }
-    return instance;
-    #endif
-}
+GLOBAL_STATIC(NetworkAccessManager, instance)
 
 NetworkAccessManager::NetworkAccessManager(QObject *parent)
     : BASE_NETWORK_ACCESS_MANAGER(parent)
