@@ -59,6 +59,7 @@
     different to those calculated.
 37. Don't use italic text for grouped view headers.
 38. Save scaled covers as PNG files.
+39. Use Q_GLOBAL_STATIC for Qt4.8, and Qt>=5.1 Qt-only builds.
 
 1.3.3
 -----
